--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/*.test.js"
   },
   "keywords": [],
   "author": "kreijstal",
   "license": "AGPLv3",
   "description": "",
   "dependencies": {
-    "jvm_parser": "^0.0.3"
+    "jvm_parser": "^0.0.3",
+    "tape": "^5.9.0"
   }
 }
