--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Run environment health check
         run: npm run health-check
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Compile Java sources
         run: npm run build:java
       - name: Run tests
@@ -67,7 +67,7 @@ jobs:
       - name: Run environment health check
         run: npm run health-check
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Compile Java sources
         run: npm run build:java
       - name: Build browser bundle for Playwright tests
@@ -102,7 +102,7 @@ jobs:
       - name: Install Krakatau (krak2)
         run: bash scripts/install-krakatau.sh
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Build project
         run: npm run build
       - name: Archive build artifacts
@@ -137,7 +137,7 @@ jobs:
       - name: Install Krakatau (krak2)
         run: bash scripts/install-krakatau.sh
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Compile Java sources
         run: npm run build:java
       - name: Smoke test Krakatau wrapper
