--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,12 @@ tools/krakatau/Krakatau
 # Build output
 dist/
 
-# Playwright test artifacts  
+# Playwright test artifacts
 test-results/
 playwright-report/
 
 # Runtime artifacts
 scripts/state.json
+
+jvm-debug.js.map
+jvm-debug.js
