--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "bash run-tests.sh",
     "test:specific": "bash run-tests.sh",
-    "test:playwright": "playwright test",
+    "test:playwright": "node scripts/generate-jre-index && playwright test",
     "test:all": "npm test && npm run test:playwright",
     "serve": "node scripts/serve.js",
     "build:java": "javac sources/*.java",
