--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jvm_parser": "^0.0.12",
     "node-fetch": "^3.0.0",
     "parsimmon": "^1.18.1",
+    "puppeteer": "^24.17.0",
     "url": "^0.11.4"
   },
   "optionalDependencies": {
