--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "node-fetch": "^3.0.0",
     "parsimmon": "^1.18.1",
     "puppeteer": "^24.17.0",
-    "url": "^0.11.4"
+    "url": "^0.11.4",
+    "yargs": "^17.7.2"
   },
   "optionalDependencies": {
     "speaker": "^0.5.5"
